# bern-next

./: .gdbinit.bak  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  init.gdb  init_jlink.gdb  output.map
.cargo/: config
bern_arch/: Cargo.toml
bern_arch/src/: context_switch.rs  core.rs  lib.rs  memory_protection.rs  scheduler.rs  startup.rs  sync.rs  syscall.rs
bern_arch/src/cortex_m/: context_switch.rs  core.rs  memory_protection.rs  mod.rs  mpu.rs  register.rs  scheduler.rs  startup.rs  sync.rs  syscall.rs
bern_arch/src/mock/: mod.rs
bern_kernel/: Cargo.toml  build.rs
bern_kernel/conf/: conf.rs
bern_kernel/conf_type/: Cargo.toml
bern_kernel/conf_type/src/: bytes.rs  lib.rs
bern_kernel/macros/: Cargo.toml  bern_test.toml
bern_kernel/macros/src/: lib.rs
bern_kernel/macros/src/conf/: generator.rs  mod.rs  parser.rs  toml.rs
bern_kernel/macros/tests/: load_conf.rs
bern_kernel/src/: boxed.rs  conf.rs  lib.rs  linked_list.rs  sched.rs  scheduler.rs  stack.rs  startup.rs  sync.rs  syscall.rs  syscalls.rs  task.rs  time.rs
bern_kernel/src/api/: syscall.rs
bern_kernel/src/collection/: boxed.rs  linked_list.rs  mod.rs
bern_kernel/src/mem/: array_pool.rs  linked_list.rs  mod.rs  pool_allocator.rs
bern_kernel/src/sched/: event.rs
bern_kernel/src/sync/: critical_mutex.rs  mod.rs  mutex.rs  semaphore.rs  simple_mutex.rs
bern_kernel/tests/arm_cm4/: Cargo.toml  memory.x
bern_kernel/tests/arm_cm4/tests/: mutex.rs  semaphore.rs  serial.rs  task.rs
bern_kernel/tests/armv7em/: Cargo.toml
bern_kernel/tests/armv7em/tests/: serial.rs  task.rs
bern_kernel/tests/armv7em/tests/common/: mod.rs
bern_test/: Cargo.toml
bern_test/macros/src/: lib.rs
bern_test/src/: console.rs  lib.rs  run_all.rs  runall.rs  serial.rs
platform/segger_cortex_m_trace/: Cargo.toml
platform/segger_cortex_m_trace/examples/: jtrace_cortex_m_reference.rs
platform/segger_cortex_m_trace/src/: lib.rs
platform/st_nucleo_f446/: Cargo.toml  bern.toml  build.rs  memory.x
platform/st_nucleo_f446/examples/: nucleo_f446_dev.rs
platform/st_nucleo_f446/src/: lib.rs
platform/st_nucleo_f446re/: Cargo.toml
platform/st_nucleo_f446re/src/: main.rs
remote/: init_jlink.gdb  ozone.jdebug
src/: main.rs  task_1.rs
src/kernel/: boxed.rs  error.rs  mod.rs  scheduler.rs  task.rs  task_trait.rs
tests/armv7em/: Cargo.toml  memory.x
tests/armv7em/src/: main.rs
tests/armv7em/tests/: serial.rs  task.rs  test.rs
tests/armv7em/tests/common/: main.rs  mod.rs  st_nucleo_f446.rs
