[workspace]

members = [
    "bern_kernel",
    "bern_kernel/macros",
    "bern_kernel/tests/arm_cm4",
    "bern_arch",
    "bern_test",
    "platform/st_nucleo_f446",
    "platform/segger_cortex_m_trace",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"