[package]
name = "segger-cortex-m-trace"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.4"
stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f407"] }

[dev-dependencies]
bern-kernel = { version = "*", path = "../../bern_kernel" }
panic-halt = "0.2.0"

# Optimize all dependencies
#[profile.dev.package."*"]
#opt-level = "s"


