[package]
name = "st-nucleo-f446re"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
#panic-probe = { version = "0.2.0", features = ["print-rtt"] }
#panic-itm = "0.4.1"
#panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.1", features = ["cortex-m"] }
embedded-hal = "0.2.4"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f446"] }

bern-kernel = { version = "*", path = '../../bern_kernel' }


[[bin]]
name = "st_nucleo_f446re"
path = "src/main.rs"  # mandatory for cargo workspace to work
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"